# ovp-pipeline

./: Cargo.toml  README.md
docs/: architecture.md
src/: lib.rs  pipeline.rs  streaming.rs  types.rs
src/ad/: mod.rs
src/audio/: resample.rs
src/filters/: mod.rs
src/operators/: beat.rs  hallucination.rs  metatalk.rs  mod.rs  scene.rs  scene_chunker.rs
src/transcribe/: mod.rs
src/vad/: mod.rs
tests/: integration.rs
