[package]
name = "ovp-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"], optional = true }
rubato = { version = "0.16", optional = true }
ort = { version = "2.0.0-rc.12", optional = true, features = ["load-dynamic"] }
ndarray = { version = "0.16", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
async-trait = "0.1"
clap = { version = "4", features = ["derive"], optional = true }
symphonia-core = { version = "0.5", optional = true }
symphonia-bundle-flac = { version = "0.5", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[[bin]]
name = "ovp-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[features]
default = ["vad", "transcribe"]
vad = ["dep:ort", "dep:ndarray"]
transcribe = ["dep:reqwest", "dep:rubato"]
opus = []
cli = ["dep:clap", "dep:symphonia-core", "dep:symphonia-bundle-flac", "dep:sha2", "dep:hex", "dep:chrono", "dep:tracing-subscriber"]
full = ["vad", "transcribe", "opus"]
